syntax = "proto3";

package question;

service QuestionService {
  rpc SearchQuestions (SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string query = 1;
  int32 page = 2;
}



message Question {
  string id = 1;
  string title = 2;
  string type = 3;
  string anagramType = 4;
  string solution = 5;
  string siblingId = 6;

  repeated Block blocks = 7;
  repeated Option options = 8;
}

message Block {
  string text = 1;
  bool showInOption = 2;
  bool isAnswer = 3;
}

message Option {
  string text = 1;
  bool isCorrectAnswer = 2;
}

message SearchResponse {
  repeated Question questions = 1;
  int32 totalCount = 2;
  int32 totalPages = 3;
}